# thought-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/app/: main.py  sim_engine.py
src/app/api/: routes.py
src/app/static/: sim.js  style.css
src/app/templates/: index.html
src/cli/: build_windows.py
