[project]
name = "thought-sim"
version = "0.1.0"
description = "Web-based thought-flow simulation environment that exports Windows artifacts"
authors = [
    { name="Your Name", email="you@example.com" }
]
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.95.0"
uvicorn = {extras=["standard"], version="^0.22.0"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
websockets = "^11.0.3"
pydantic = "^1.10.7"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
